add future development

--- a/ClickSoftware_DS_Exam_Koren.ipynb
+++ b/ClickSoftware_DS_Exam_Koren.ipynb
@@ -348,7 +348,9 @@
     "\t\n",
     "\ta. For random forest and AdaBoost, mostly n_estimators\n",
     "\t\n",
-    "\tb. For MLP trying different layers amount and sizes\n"
+    "\tb. For MLP trying different layers amount and sizes\n",
+    "\n",
+    "4. Trying more models. (Focus on models using boosting because it is the best so far)\n"
    ]
   },
   {
